2013-09-23 Fixed TextParserProxy issue
2013-09-23 Added simulate Tap event listeners to 4 addons (True/False, Connection, Image Identification, Text Identification)
2013-09-20 Fixed addon on Feedback issue
2013-09-19 Fixed Glossary links on feedback
2013-09-19 Added TextParserProxy: parse, connectLinks - in Commons (now in version 1.8)
2013-09-19 Added Drawing module. This module allows to draw on digital canvas.
2013-09-18 Fixed Glossary issue
2013-09-17 Script allows True and False values
2013-09-16 Added getState and setState for Puzzle
2013-09-16 goToPageIndex added to API
2013-09-13 Choice can work in not activity mode
2013-09-12 Addon Glossary can not hide other addons
2013-09-12 Fixed problem with Glossary in Preview
2013-09-11 Fixed problem with image gap not activity under show errors mode
2013-09-06 Fixed problem with Glossary and Popup
2013-09-06 Fixed problem with draggable gaps and state
2013-09-06 Fixed problem with going to first page in book mode
2013-09-05 Popup z-index = 100
2013-09-04 Added Book API
2013-09-03 Fixed Paragraph for non existing tinymce editor
2013-09-03 Added default sizes to ic_popup_page CSS class 
2013-09-02 Fixed PlayerUtils for object with unavailable API
2013-09-02 Fixed problem addon resources
2013-09-02 Fixed problem with gaps on popups
2013-09-02 Added thousand separator for Math module
2013-09-02 Added StringUtils: replaceAll, startsWith, endsWith - in Commons (now in version 1.7)
2013-08-29 Fixed problem with shuffling in Puzzle module
2013-08-29 Fixed problem with state in text module
2013-08-27 Added relative layout
2013-08-26 Page without tasks is calculated as 100% in score
2013-08-19 Added Text Selection module - enable to select parts of texts
2013-08-09 Fixed problem with too many change events from choice module
2013-08-09 Added cover page to book mode
2013-08-07 Updated modules descriptions
2013-08-05 Fixed problem with nonunicode characters pasted to text editor
2013-08-02 Check can be used on footer and header